--- a/pcie_poll_test/Makefile
+++ b/pcie_poll_test/Makefile
@@ -7,7 +7,7 @@
 CC = gcc
 CPPFLAGS +=-D_REENTRANT -Wall -Wunused -std=gnu99
 
-OBJS += testrecv.o   testsend.o
+OBJS += testrecv.o   testsend.o testsend_4k.o
 LIBS +=
 
 all : testrecv testsend
@@ -21,6 +21,8 @@ testrecv: testrecv.o
 testsend:testsend.o
 	$(CC)  $(LDDFLAGS) -o $@  $^ $(LIBS)
 
+testsend_4k:testsend_4k.o
+	$(CC)  $(LDDFLAGS) -o $@  $^ $(LIBS)
 clean:
 	rm -f  *.o   testrecv testsend
 	
